# software-renderer-1

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
core/: CMakeLists.txt
core/ext/vecm/: pack.h
core/src/: app.c  app.h  libentry.c  sr1.h  window.c  window.h
core/src/math/: vertex.h
core/src/systems/: input.c  input.h  logging.c  logging.h
corelib/: CMakeLists.txt
corelib/src/: api.h  application.c  application.h  render.h  sr1.h  window.c  window.h
corelib/src/math/: vertex.h
corelib/src/shading/: shader.h  test_shader.h
corelib/src/systems/: input.c  input.h  logging.c  logging.h
rohan/: CMakeLists.txt
rohan/ext/vecm/: types.h
rohan/ext/vecm/mat/: mat3x3.h  mat4x4.h
rohan/ext/vecm/packing/: 16x8u.h  4x32u.h
rohan/ext/vecm/vec/: vec2.h  vec3f.h  vec4f.h
rohan/src/: api.h  ebo.h  log.c  log.h  render.c  render.h  rohan.h  shader.h  target.c  target.h  types.h
sandbox/: CMakeLists.txt
sandbox/shaders/: build_shaders.sh  fs.c  vs.c
sandbox/src/: entry.c
testing/: CMakeLists.txt
testing/src/: entry.c
